--- a/R/002-celltype.Rmd
+++ b/R/002-celltype.Rmd
@@ -1,207 +1,405 @@
 ---
-title: "10x Hudeca Nasal: Cell type annotation"
+title: "HUDECA — 002 ANNOTATION"
 author: "Mbouamboua Yvon <yvon.mbouamboua@inserm.fr>"
 output:
-    html_document:
-       toc: true
-       toc_float: true
-       number_sections: true
-date: 'Last update: `r format(Sys.time())`'
+  html_document:
+    toc: true
+    toc_float: true
+    number_sections: true
+date: '`r format(Sys.Date())`'
 ---
 
-# Setup
+## Goal
+Cell type annotation
 
+## Setup
 ```{r setup, include=TRUE, message=FALSE, warning=FALSE}
-
-invisible(gc())
-knitr::opts_chunk$set(warning = FALSE, results = TRUE, message = FALSE, comment = "")
-dir.main <- "/Users/yvon.mbouamboua/Documents/projects/singlecell/hudeca_nasal"
-dir.results <- file.path(dir.main, "results", "003_celltype")
+knitr::opts_chunk$set(warning = FALSE, message = FALSE, comment = "")
+dir.main <- "/Users/yvon.mbouamboua/projects/singlecell/000-hudeca-nose"
+dir.results <- file.path(dir.main, "output", "002-annotation")
 dir.create(dir.results, showWarnings = FALSE, recursive = TRUE)
+dir.create(file.path(dir.results, "data"), showWarnings = FALSE)
+dir.create(file.path(dir.results, "plots"), showWarnings = FALSE)
 
-# Load R packages
-packages <- c("Seurat", "ggplot2", "dplyr", "tidyverse","grid",
-              "SingleCellExperiment", "scran", "scater", "pheatmap", "ComplexHeatmap", "ComplexUpset", "patchwork")
-
-# Function to check and install packages from CRAN or Bioconductor
+# Load packages
+packages <- c("Seurat", "ggplot2", "dplyr", "grid",
+"SingleCellExperiment", "scran", "scater",
+"pheatmap", "ComplexHeatmap", "ComplexUpset", "patchwork")
 install_and_load <- function(pkg) {
-  # Check if the package is from Bioconductor
-  if (!requireNamespace(pkg, quietly = TRUE)) {
-    if (!requireNamespace("BiocManager", quietly = TRUE)) install.packages("BiocManager")
-    BiocManager::install(pkg, ask = FALSE)
-  }
-  # Load the package
-  suppressWarnings(suppressMessages(library(pkg, character.only = TRUE)))
+  if (!requireNamespace(pkg, quietly = TRUE)) install.packages(pkg)
+  library(pkg, character.only = TRUE)
 }
-
-# Apply function to each package
-suppressPackageStartupMessages({
-  invisible(lapply(packages, install_and_load))
-})
+invisible(lapply(packages, install_and_load))
 
 # Load helper functions
-# Define the directory where utility scripts are located
-utils_dir <- "~/Documents/projects/singlecell/utilities/"
-# Get a list of all R files in the directory
+utils_dir <- "~/projects/apps/"
 r_files <- list.files(utils_dir, pattern = "\\.R$", full.names = TRUE)
-# Source each R file
-invisible(suppressWarnings(suppressMessages(lapply(r_files, source))))
-
+invisible(lapply(r_files, source))
 ```
 
-# Load data
+
+
+# Load integrated data
 
 ```{r}
 
-obj <- readRDS(file.path(dir.main, "results/002_integration/rdata/FN_postprocessed.rds"))
+obj <- readRDS(file.path(dir.main, "output/001-integration/data/FN_integrated.rds"))
+scCustomize::as.anndata(x = obj, file_path = file.path(dir.results, "data"),file_name = "FN_integrated.h5ad")
+
+# Define metadata table
+meta <- data.frame(
+  BulkSample = c("S1-PCW7","S2-PCW8","S3-PCW10","S5-PCW10","S4-PCW10.5","S6-PCW12","S7-PCW12","S8-PCW12"),
+  sample = c("S1-PCW7","S2-PCW8","S3-PCW10","S5-PCW10","S4-PCW10.5","S6-PCW12", "S7-PCW12","S8-PCW12"),
+  stage = c("PCW7","PCW8","PCW10","PCW10","PCW10","PCW12","PCW12","PCW12"),
+  group = c("PCW7-8","PCW7-8","PCW10","PCW10","PCW10","PCW12","PCW12","PCW12"),
+  age = c("7","8","10","10","10","12","12","12"),
+  bmi = c("Normal","Normal","Normal","Obese","Normal","Obese","Normal","Normal"),
+  bmi_group = c("Normal-7-8","Normal-7-8","Normal-10-12","Obese-10-12","Normal-10-12","Obese-10-12","Normal-10-12","Normal-10-12"),
+  sex = c("Male","Female","Male","Male","Female","Male","Female","Male"),
+  stringsAsFactors = FALSE
+)
+
+# Convert to factors with specified levels
+meta$sample <- factor(meta$sample, levels = c("S1-PCW7","S2-PCW8","S3-PCW10","S5-PCW10","S4-PCW10.5","S6-PCW12","S7-PCW12","S8-PCW12"))
+meta$stage <- factor(meta$stage, levels = c("PCW7","PCW8","PCW10","PCW12"))
+meta$group <- factor(meta$group, levels = c("PCW7-8","PCW10","PCW12"))
+meta$age <- factor(meta$age, levels = c("7","8","10","12"))
+meta$bmi <- factor(meta$bmi, levels = c("Normal","Obese"))
+meta$bmi_group <- factor(meta$bmi_group, levels = c("Normal-7-8","Normal-10-12","Obese-10-12"))
+meta$sex <- factor(meta$sex, levels = c("Male","Female"))
+
+# Add metadata to Seurat object
+obj <- AddMetaData(obj, meta = meta[match(obj$BulkSample, meta$BulkSample), ])
+
+cellmap(object = obj, group.by = "sample")
+cellmap(object = obj, group.by = "sex")
+cellmap(object = obj, group.by = "age")
+cellmap(object = obj, group.by = "stage")
+cellmap(object = obj, group.by = "group")
+cellmap(object = obj, group.by = "bmi")
+cellmap(object = obj, group.by = "bmi_group")
+cellmap(object = obj, group.by = "RNA_snn_res.0.5", label = T)
 
 ```
 
-# Plot UMAPs
 
-```{r}
+# Check cluster quality
 
-DimPlot(object = obj, group.by = "seurat_clusters")
-DimPlot(object = obj, group.by = "sample")
-DimPlot(object = obj, group.by = "scDblFinder.class")
-
+```{r fig.width=10, fig.height=5}
+cellvio(obj, group.by = "seurat_clusters", features = c("nFeature_RNA", "nCount_RNA","percent_mito"), stack = T)
+cellvio(obj, group.by = "sample", features = c("nFeature_RNA", "nCount_RNA","percent_mito"), stack = T)
 ```
 
-# Azimuth prediction
 
-```{r fig.width=14, fig.height=8, message=F, warning=F}
+# Find markers
 
-invisible(gc())
-DefaultAssay(obj) <- "RNA"
-obj <- FindVariableFeatures(obj)
-obj <- RunAzimuth(obj, reference = "fetusref")
+```{r fig.width=10, fig.height=20, warning=FALSE, message=FALSE,error=FALSE}
 
-DimPlot(object = obj, group.by = "predicted.annotation.l1") 
-
-pheatmap::pheatmap(scale(prop.table(as.matrix(table(obj@meta.data$predicted.annotation.l1,
-                                                    obj@meta.data$seurat_clusters)), 2)*100), 
-                    treeheight_col = 0, treeheight_row = 0, 
-                   angle_col = 0,  cluster_rows = F, cluster_cols = T,
-                   color = colorRampPalette(c("black", "white", "red"))(100))
-
-```
-
-# Find cluster markers
-
-```{r fig.width=10, fig.height=3.5, warning=FALSE, message=FALSE,error=FALSE}
-
-DefaultAssay(obj) <- "RNA"
-markers <- FindAllMarkers(obj,  group.by = "seurat_clusters", only.pos = T)
+## Filter quality by removing unwanted genes
+sub <- filter_genes(obj)
+markers <- cellmarker(sub,  group.by = "seurat_clusters", only.pos = T, max.cells.per.ident = 1000, min.pct = 0.1)
+write.table(markers, file.path(dir.results, "data/harmony_clusters.tsv"), sep = "\t", row.names = F, quote = F)
+rm(sub)
+markers <- read.delim(file.path(dir.results, "data/harmony_clusters.tsv"))
 top <- markers %>% group_by(cluster) %>% top_n(n = 3, wt = avg_log2FC)
-DotPlot(sub, features = top$gene) 
+celldot(obj, features = rev(top$gene), flip = T, group.by = "seurat_clusters") 
 
 ```
 
-# Annotation level 2
+# Manual annotation
 
-```{r fig.width=12, fig.height=8}
+```{r fig.width=10, fig.height=6}
 
-obj@meta.data$ann_level_2 <- NULL
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(20),"ann_level_2"] <- "Progenitor cells" # PAX6, "SOX2
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(38),"ann_level_2"] <-"Deuterosomal" # "DEUP1","HES6","CCNO"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(23,32),"ann_level_2"] <-"Multiciliated" # "SNTN","DNAH5"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(16,33,49,50),"ann_level_2"] <-"Vascular EC"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(43),"ann_level_2"] <-"Lymphatic EC"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(19,52),"ann_level_2"] <-"Pericytes" # PDGFRB
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(17),"ann_level_2"] <-"Neural progenitors" # "GFAP",SOX2,HES5
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(21),"ann_level_2"] <-"Excitatory neurons" # NEUROD2 (YINGCHAO SHI, 2021, DOI:10.1126/science.abj6641)
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(25),"ann_level_2"] <-"Inhibitory neurons" # GAD1 (Human protein atlas)
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(47),"ann_level_2"] <-"NOS1 neurons"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(51),"ann_level_2"] <-"Schwann precursors" # "SOX10" (Zeisel et al., 2018, Cell 174, 999–1014)
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(41),"ann_level_2"] <- "Olf. ensh. glia" # "NGFR","RUNX1","NPY","FRZB","SEMA3A","NUMB","PAX3,"NELL2
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(29),"ann_level_2"] <- "Neural crest" # "S100B","RUNX1","CHD7","FOXD3"
-obj@meta.data[obj@meta.data$predicted.annotation.l1 %in% c("Schwann cells"),"ann_level_2"] <-"Schwann cells" # "MPZ","MPB"
-obj@meta.data[rownames(obj@meta.data) %in% c(melano.cells),"ann_level_2"] <-"Melanocytes" # "IMITF"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(4,18,28),"ann_level_2"] <-"Cartilages" # "COL9A1", "COL11A1", "COL2A1", "ACAN", "WWP2"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(0,8,11,12),"ann_level_2"] <-"Osteoblasts" # "RUNX2"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(5,22,44),"ann_level_2"] <-"Stromal0" # prolif cells
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(1,2,13),"ann_level_2"] <- "Stromal1"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(3,9,10,27,34),"ann_level_2"] <- "Stromal2"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(6),"ann_level_2"] <-"Skeletal muscle"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(36,45,46),"ann_level_2"] <- "Satellites"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(53),"ann_level_2"] <-"GBCs" # "HES6"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(14,35,39,48,54),"ann_level_2"] <-"Basal KRT"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(30),"ann_level_2"] <-"Olf. HBCs"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(40,42),"ann_level_2"] <-"Cycling basal KRT"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(7,26,37,55),"ann_level_2"]  <- "Microvillars" # "MUC5AC (PMCID: PMC8564600), "GLIS3
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(15),"ann_level_2"]  <- "Sustentaculars" # "IQCJ-SCHIP1", "TMEM132D", "LPGAT1"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(31),"ann_level_2"] <-"Myeloid" 
-obj@meta.data[rownames(obj@meta.data) %in% c(microglia.cells),"ann_level_2"] <- "Microglia" # "CX3CR1", "CD14","TMEM119"
-obj@meta.data[obj@meta.data$seurat_clusters %in% c(24),"ann_level_2"] <- "iOSNs" 
-obj@meta.data[rownames(obj@meta.data) %in% c(mOSN.cells),"ann_level_2"] <- "mOSNs"
-obj@meta.data[rownames(obj@meta.data) %in% c(INP.cells),"ann_level_2"] <- "INP" # NEUROD1, NEUROG1
-obj@meta.data[rownames(obj@meta.data) %in% c(gnrh1.cells),"ann_level_2"] <-"GnRH neurons" # "ISL1","GNRH1","LINC01060","TAC3
-
-obj@meta.data$ann_level_2_order <- factor(obj@meta.data$ann_level_2, levels = c("Progenitor cells","Cycling basal KRT", "Basal KRT","Olf. HBCs","Deuterosomal", "Multiciliated", "Microvillars","Sustentaculars", "GBCs","INP","iOSNs","mOSNs","Inhibitory neurons", "Excitatory neurons","Neural progenitors","GnRH neurons", "NOS1 neurons","Schwann precursors","Schwann cells","Neural crest", "Olf. ensh. glia","Melanocytes","Vascular EC", "Lymphatic EC","Satellites", "Skeletal muscle","Stromal0","Stromal1","Stromal2","Osteoblasts","Cartilages", "Pericytes", "Myeloid", "Microglia"))
-
-DimPlot(object = obj, group.by = "ann_level_2")
+Idents(obj) <- "seurat_clusters"
+obj <- FindSubCluster(obj, cluster = 11, resolution = 0.3, graph.name = "RNA_snn", subcluster.name = "C11")
+Idents(obj) <- "C11"
+obj <- FindSubCluster(obj, cluster = 23, resolution = 0.2, graph.name = "RNA_snn", subcluster.name = "subclusters")
+cellmap(object = obj, group.by = "subclusters", label = T, pt.size = 1, n.cells = T, label.size = 5)
 
 ```
 
-## Annotation level 1
+```{r fig.width=12, fig.height=6}
 
-```{r fig.width=12, fig.height=8}
+# GnRH cells
+gnrh1 <- cellpick(obj, clusters = c(27), cluster.col = "seurat_clusters", pos.genes =  c("GNRH1"), expr.thresh = 0)
 
-obj@meta.data$ann_level_1 <- NULL
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Progenitor cells"),"ann_level_1"] <- "Progenitor cells" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Deuterosomal", "Multiciliated","Cycling basal KRT", "Basal KRT"),"ann_level_1"] <- "Respiratory mucosa" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Olf. HBCs","Microvillars","Sustentaculars", "GBCs","INP","iOSNs","mOSNs"),"ann_level_1"] <- "Olfactory epithelium"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Lymphatic EC"),"ann_level_1"] <- "Lymphatic EC"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Vascular EC"),"ann_level_1"] <- "Vascular EC"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Skeletal muscle"),"ann_level_1"] <- "Skeletal muscle"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Satellites"),"ann_level_1"] <- "Satellites"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Stromal0","Stromal1","Stromal2"),"ann_level_1"] <- "Mesenchyme" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Osteoblasts"),"ann_level_1"] <- "Osteoblasts" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Cartilages"),"ann_level_1"] <- "Cartilages" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Pericytes"),"ann_level_1"] <- "Pericytes" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Myeloid", "Microglia"),"ann_level_1"] <- "Immune" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Schwann precursors","Schwann cells"),"ann_level_1"] <- "Schwann cells"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Melanocytes"),"ann_level_1"] <- "Melanocytes"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Neural crest"),"ann_level_1"] <- "Neural crest"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Olf. ensh. glia"),"ann_level_1"] <- "Olfactory ensheathing"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Inhibitory neurons", "Excitatory neurons","Neural progenitors", "NOS1 neurons"),"ann_level_1"] <- "Neurons"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("GnRH neurons"),"ann_level_1"] <- "GnRH neurons"
+marker_panel <- list(
+  OEC = c("SOX10","S100B","PLP1","PMP22","CLDN11","GFAP"),
+  Schwann = c("MPZ","MBP","ERBB3","SOX10","PLP1","GINS3","IL1RAP"),
+  Melanocyte = c("MITF","TYR","PMEL","DCT","MLANA")
+  #Neuron = c("SLC24A2","KLHL1","PRDM8","OMP","TUBB3","GAP43")
+)
 
-DimPlot(object = obj, group.by = "ann_level_1")
+marker_panel <- unique(unlist(marker_panel))
+celldot(obj, features = c(marker_panel,"PDZRN4","ADAM12"), flip = T, base.size = 9)
+
+# Melanocyte cells
+mel <- cellpick(obj, clusters = c("11_0","11_3"), cluster.col = "subclusters", pos.genes =  c("MITF"), expr.thresh = 1)
 
 ```
 
-## Annotation level 0
+# Annotate OHBC
 
-```{r fig.width=12, fig.height=8}
+```{r}
 
-obj@meta.data$ann_level_0 <- NULL
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Progenitor cells"),"ann_level_0"] <- "Progenitor cells" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Deuterosomal", "Multiciliated","Cycling basal KRT", "Basal KRT","Olf. HBCs","Microvillars","Sustentaculars", "GBCs","INP","iOSNs","mOSNs"),"ann_level_0"] <- "Epithelium" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Vascular EC", "Lymphatic EC"),"ann_level_0"] <- "Endothelium"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Satellites", "Skeletal muscle"),"ann_level_0"] <- "Myocytes"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Stromal0","Stromal1","Stromal2","Osteoblasts","Cartilages","Pericytes"),"ann_level_0"] <- "Mesenchyme" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Myeloid", "Microglia"),"ann_level_0"] <- "Immune" 
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Neural crest","Melanocytes"),"ann_level_0"] <- "Neural crest"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Schwann precursors","Olf. ensh. glia","Schwann cells"),"ann_level_0"] <- "Glial"
-obj@meta.data[obj@meta.data$ann_level_2 %in% c("Inhibitory neurons", "Excitatory neurons", "GnRH neurons","Neural progenitors", "NOS1 neurons"),"ann_level_0"] <- "Neurons"
+cellvio(obj, group.by = "sample", features = c("nCount_RNA"))
+cellmap(obj, group.by = "RNA_snn_res.0.5", label = T)
 
-DimPlot(object = obj, group.by = "ann_level_0")
+ohbc <- cellpick(
+  obj,
+  pos.genes = c("TP63","KRT5","KRT14","COL17A1","DST","MEG3"),
+  min.genes = 2,
+  expr.thresh = 0.5,
+  neg.genes = c("MUC5AC","MUC5B","CDC20B","SOX2"),
+  cluster.col = "RNA_snn_res.0.5",
+  clusters = 13,
+  meta.col = "group",
+  meta.vals = c("PCW10","PCW12")
+)
+
+```
+
+## Annotation level 2
+
+```{r fig.width=10, fig.height=6}
+
+obj@meta.data$ann2 <- NULL
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(28),"ann2"] <- "MSC" # PAX6, "SOX2
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(32),"ann2"] <-"Deut" # "DEUP1","HES6","CCNO"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(7,41),"ann2"] <-"MCC" # "SNTN","DNAH5"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(10,35,36),"ann2"] <-"EC"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(34),"ann2"] <-"Lymph"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(19),"ann2"] <-"Peri" # PDGFRB
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(22,40),"ann2"] <-"NP" # "GFAP",SOX2,HES5
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(27),"ann2"] <-"GABA" #"SLC32A1","GAD1","GAD2"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(21,39),"ann2"] <-"GLUT" # "SLC17A6","SLC17A7","CRH"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(38),"ann2"] <-"NOS1"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(11),"ann2"] <- "OEC" # "SOX10", "S100B", "VIM", "PLP1", "GFAP", "FABP7", "CD44","NELL2"
+obj@meta.data[obj@meta.data$subclusters %in% c("11_1"),"ann2"] <-"NCC" 
+obj@meta.data[obj@meta.data$Braun_2023_majority_voting %in% c("Head neural crest cells"),"ann2"] <- "NCC" #"FOXD3", "TFAP2A", "NGFR"
+obj@meta.data[obj@meta.data$subclusters %in% c("11_4"),"ann2"] <-"SCP" 
+obj@meta.data[obj@meta.data$subclusters %in% c("11_2"),"ann2"] <-"SC" # "MPZ","MBP","ERBB3"
+obj@meta.data[rownames(obj@meta.data) %in% c(mel),"ann2"] <-"Mel" # "MITF"
+obj@meta.data[obj@meta.data$Chenqu_Suo_2022_predicted_labels %in% c("MELANOCYTE"),"ann2"] <- "Mel" #"FOXD3", "TFAP2A", "NGFR"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(9,18,29),"ann2"] <-"Cartl" # "COL9A1", "COL11A1", "COL2A1", "ACAN", "WWP2"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(1,6,14),"ann2"] <-"Osteo" # "RUNX2"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(4,37),"ann2"] <-"Mes0" # prolif cells
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(0,5,13),"ann2"] <- "Mes1"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(2,20,24,30,33),"ann2"] <- "Mes2"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(12),"ann2"] <-"SM"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(15),"ann2"] <- "Sat"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(42),"ann2"] <-"GBC" # "HES6","TCF12","TCF4","TCF3","HIF1A","ARNT"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(8,16,31),"ann2"] <-"RHBC" # TP63, SOX2
+#obj@meta.data[obj@meta.data$seurat_clusters %in% c(16),"ann2"] <-"0HBC"
+obj@meta.data[rownames(obj@meta.data) %in% c(ohbc),"ann2"] <- "OHBC" # TP63, COL17A1
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(26),"ann2"] <-"CycBasal"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(3),"ann2"]  <- "MV" # "MUC5AC (PMCID: PMC8564600), "GLIS3
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(17),"ann2"]  <- "SUS" # "IQCJ-SCHIP1", "TMEM132D", "LPGAT1"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(25),"ann2"] <-"MG" # "CX3CR1", "CD14","TMEM119","MS4A4A","CSF1R","ITGAM","P2RY12"
+obj@meta.data[obj@meta.data$seurat_clusters %in% c(23),"ann2"] <- "iOSN"
+obj@meta.data[obj@meta.data$subclusters %in% c("23_1"),"ann2"] <- "INP" # NEUROD1, NEUROG1, LHX2
+obj@meta.data[rownames(obj@meta.data) %in% c(gnrh1),"ann2"] <-"GnRH" # "ISL1","GNRH1","LINC01060","TAC3
+
+cellmap(obj, group.by="ann2",  label = T, pt.size = 0.5, figplot = T, dark = T)
 
 ```
 
-# Save data  
 
-```{r fig.width=12, fig.height=8}
+# Order the cells
 
-saveRDS(obj, file.path(dir.results, "rdata/FN.rds"))
+```{r}
+
+# Level 2: fine-grained cell types
+ann2_levels <- c(
+"RHBC","OHBC","CycBasal","GBC","INP","iOSN","Deut","MCC","MV","SUS",  # Epithelium
+"NP","GLUT","GABA","GnRH","NOS1", # Neuronal
+"NCC","SCP","SC","OEC","Mel", # Neural Crest / Glia
+"MSC","Mes0","Mes1","Mes2","Osteo","Cartl", # Mesenchyme
+"Peri","EC","Lymph",  # Vascular
+"Sat","SM", # Muscle
+"MG" # Immune
+)
+
+# Ensure your Seurat object has ann2
+obj$ann2 <- factor(obj$ann2, levels = ann2_levels)
+
+# Level 1 mapping → lineage groups
+
+ann_map_level1 <- list(
+  "Olfactory Epithelium"   = c("OHBC","CycBasal","GBC","MV","SUS","INP","iOSN"),
+  "Respiratory Epithelium" = c("RHBC","Deut","MCC"),
+  "Neuronal"               = c("NP","GLUT","GABA","GnRH","NOS1"),
+  "NCC-Glia"               = c("NCC","SCP","SC","OEC","Mel"),
+  "Mesenchyme"             = c("MSC","Mes0","Mes1","Mes2","Osteo","Cartl"),
+  "Vascular"               = c("Peri","EC","Lymph"),
+  "Muscle"                 = c("Sat","SM"),
+  "Immune"                 = c("MG")
+)
+
+# Invert mapping (cell type → lineage)
+inv_level1 <- unlist(lapply(names(ann_map_level1), function(x) {
+  setNames(rep(x, length(ann_map_level1[[x]])), ann_map_level1[[x]])
+}))
+
+level1_vector <- inv_level1[as.character(obj$ann2)]
+names(level1_vector) <- colnames(obj)
+
+# Keep only cells with valid mapping
+valid_cells1 <- names(level1_vector)[!is.na(level1_vector)]
+#obj <- subset(obj, cells = valid_cells1)
+
+obj <- AddMetaData(obj, metadata = level1_vector[valid_cells1], col.name = "ann1")
+obj$ann1 <- factor(obj$ann1, levels = names(ann_map_level1))
+
+ann_map_level0 <- list(
+  "Epithelium" = c("Olfactory Epithelium","Respiratory Epithelium"),
+  "Neuronal"   = c("Neuronal"),
+  "NCC-Glia" = c("NCC-Glia"),
+  "Mesenchyme" = c("Mesenchyme"),
+  "Vascular"   = c("Vascular"),
+  "Muscle"     = c("Muscle"),
+  "Immune"     = c("Immune")
+)
+
+# inv_level0 maps Level1 → Level0
+inv_level0 <- unlist(lapply(names(ann_map_level0), function(x) {
+  setNames(rep(x, length(ann_map_level0[[x]])), ann_map_level0[[x]])
+}))
+
+# Create a vector for ALL cells
+level0_vector <- inv_level0[as.character(obj$ann1)]
+
+# Name the vector with Seurat cell names
+names(level0_vector) <- colnames(obj)
+
+# Add to Seurat metadata
+obj <- AddMetaData(obj, metadata = level0_vector, col.name = "ann0")
+
+# Convert to factor with only defined levels
+obj$ann0 <- factor(obj$ann0, levels = names(ann_map_level0))
 
 ```
+
+
+# Remove outlier cells
+
+```{r fig.width=12, fig.height=14}
+
+highlight_clusters(object = obj, group.by = "ann2", mode = "single", ncol = 4)
+
+res <- filter_outliers(obj = obj, group.by = "ann2", density.threshold = 0.95, k = 40, relax = 3,
+                       clean.all = T, verbose = T, return.plot = F)
+
+highlight_clusters(object = res$obj, group.by = "ann2", mode = "single", ncol = 4)
+
+obj <- res$obj
+
+res <- filter_outliers(obj = obj, group.by = "ann2", target.clusters = "MSC",
+                       density.threshold = 0.70, k = 50, relax = 1.2,clean.all = F, verbose = T, return.plot = F)
+obj <- res$obj
+rm(res)
+highlight_clusters(object = obj, group.by = "ann2",cluster.names = "MSC", mode = "single", ncol = 1)
+
+
+res <- filter_outliers(obj = obj, group.by = "ann2", target.clusters = "Peri",
+                       density.threshold = 0.90, k = 50, relax = 2,clean.all = F, verbose = T, return.plot = F)
+
+highlight_clusters(object = res$obj, group.by = "ann2",cluster.names = "Peri", mode = "single", ncol = 1)
+
+obj <- res$obj
+rm(res)
+highlight_clusters(object = obj, group.by = "ann2", mode = "single", ncol = 4)
+
+```
+
+# Remove ambient RNA post-integration
+
+```{r}
+
+decontx <- run_decontx(obj)
+saveRDS(decontx, file.path(dir.results, "data/decontX.rds"))
+obj[["RNA"]]@layers$counts <- decontx$cleaned_counts
+obj$decontX_contamination <- decontx$sce$decontX_contamination
+obj <- NormalizeData(obj) %>% FindVariableFeatures() %>% ScaleData()
+
+```
+
+## Plot decontx contamination
+
+```{r}
+
+df <- data.frame(
+  UMAP1 = obj[["umap"]]@cell.embeddings[,1],
+  UMAP2 = obj[["umap"]]@cell.embeddings[,2],
+  contamination = decontx$sce$decontX_contamination
+)
+
+ggplot(df, aes(UMAP1, UMAP2, color = contamination)) +
+  geom_point(size = 0.3, alpha = 0.8) +
+  #scale_color_viridis_c() +
+  scale_color_gradientn(
+    colors = c("blue", "green", "yellow", "orange", "red"),
+    guide = guide_colorbar(title = "Contamination", title.position = "left",
+      title.theme = element_text(angle = 90, vjust = 0.5),
+      barwidth = 1, barheight = 8, ticks = TRUE, frame.colour="black", ticks.colour="black")) +
+  plot_theme(theme = "classic", font.size = 14) +
+  ggtitle("DecontX contamination") +
+  theme(legend.pos = "right", legend.title.align = 0.5)
+
+```
+
+
+## plot_decontx_marker_percen
+
+```{r fig.width=18, fig.height=6}
+
+markers <- c("XIST","UTY","HBB","HBA1")
+
+plot_decontx_marker_percent(
+  sce = decontx$sce,
+  markers = markers,fontsize = 14,
+  group_by = "ann2",
+  assays = c("counts","decontXcounts"),
+  plot_type = "bar", custom_colors = c("#151A1F", "#8CB9E6")
+)
+
+```
+
+# Sex-chromosome–based sample identity and contamination quality control
+
+```{r}
+
+# Run QC and generate violin plots
+res <- sex_contamination_qc(
+  obj,
+  sample_col = "sample",
+  y_genes = c("UTY","RPS4Y1","ZFY","DDX3Y","KDM5D"),
+  xist_gene = "XIST",
+  eps = 1e-6,
+  female_thresh = 1,
+  male_thresh = -1,
+  eryth_genes = c("HBB","HBA1","HBA2","HBE1","HBG1","HBG2","HBM"),
+  eryth_percentile = 0.95,
+  remove_ambiguous = T,
+  majority_threshold = 0.5,
+  min_sex_score_diff = NULL,
+  out_file = file.path(dir.results, "data/sex_qc.tsv")
+)
+
+# Access results
+tbl_summary <- res$tbl_summary
+obj <- res$filtered
+obj <- NormalizeData(obj) %>% FindVariableFeatures() %>% ScaleData()
+saveRDS(res$object, file.path(dir.main, "output/002-annotation/data/FN_harmony.rds"))
+saveRDS(res$filtered, file.path(dir.main, "output/002-annotation/data/FN_harmony_clean.rds"))
+rm(res)
+tbl_summary
+
+```
+
 
 # Session Info
 
 ```{r session_info}
-
 utils::capture.output(devtools::session_info())
-
 ```
