--- a/R/000-qc.Rmd
+++ b/R/000-qc.Rmd
@@ -1,1 +1,168 @@
+---
+title: "000-HUDECA — 000-qc"
+output: html_document
+author: "Mbouamboua Yvon <yvon.mbouamboua@inserm.fr>"
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    number_sections: true
+date: '`r format(Sys.Date())`'
+---
 
+## Goal
+Quality control
+
+## Setup
+
+```{r}
+
+knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+root <- '/Users/yvon.mbouamboua/projects/singlecell/000-hudeca'
+outdir <- file.path(root, 'out', '000-qc')
+invisible(lapply(c(outdir, file.path(outdir, 'data'), file.path(outdir, 'plots')),
+                 dir.create, recursive = TRUE, showWarnings = FALSE))
+srcr <- file.path(root, 'src', 'R')
+invisible(lapply(list.files(srcr, full.names = TRUE), source))
+appdir <- Sys.getenv('APPS', '~/projects/apps')
+if (dir.exists(appdir)) {
+  pkgfile <- file.path(appdir, 'packages.R')
+  if (file.exists(pkgfile)) sys.source(pkgfile, envir = .GlobalEnv)
+  helper_files <- list.files(appdir, pattern = '\\.R$', full.names = TRUE)
+  helper_files <- helper_files[basename(helper_files) != 'packages.R']
+  invisible(lapply(helper_files, sys.source, envir = .GlobalEnv))
+}
+
+```
+
+
+
+# Create seurat objects
+
+```{r}
+
+samples <- c("FN_S1256", "FN_S3478")
+
+seu <- load_seurat(
+  sample.dirs = samples,
+  parent.dir = file.path(root, "data/proc"),
+  use.filtered = TRUE,
+  merge = FALSE
+)
+
+```
+
+
+```{r}
+
+cell1256 <- colnames(seu$FN_S1256)
+cell3478 <- colnames(seu$FN_S3478)
+dup <- intersect(cell1256, cell3478)
+length(dup)
+#intersect(colnames(obj), dup) # no duplicated cell in final cleanned integrated data
+
+```
+
+
+```{r}
+
+res <- clean_seurat_barcodes(seu, mode = "both", outdir = file.path(outdir, "data"))
+objs <- res$objects
+log  <- res$log
+rm(res)
+
+```
+
+
+```{r}
+
+# Remove duplicated cells in each demuxafy result
+for (s in c("FN_S1256", "FN_S3478")) {
+  f <- file.path(root, "data/proc/WS_demuxafy", s,
+                 "combine_majoritySinglet/combined_results_w_combined_assignments.tsv")
+  df <- read.delim(f)
+  df <- df[!df$Barcode %in% dup, ]
+  write.table(df, sub(".tsv$", "_clean.tsv", f),
+              sep = "\t", row.names = FALSE, quote = FALSE)
+}
+
+merged <- readRDS("~/projects/singlecell/000-hudeca/out/000-qc/data/merged.rds")
+dim(merged) # 59173
+merged <- merged[, !colnames(merged) %in% dup]
+dim(merged)
+saveRDS(merged, "~/projects/singlecell/000-hudeca/out/000-qc/data/merged.rds")
+merged
+raw <- raw[, !colnames(raw) %in% dup]
+raw <- readRDS("~/projects/singlecell/000-hudeca/out/000-qc/data/raw.rds")
+
+
+```
+
+
+
+# Add demuxafy
+
+```{r}
+
+objs$FN_S1256 <- add_bulk_mapping_to_seurat(
+  object = objs$FN_S1256, 
+  remove_doublets = F,
+  combined_tsv = file.path(root, "analysis/FN_S1256_bulk_mapping/combined_results_with_bulk_mapping.tsv")
+)
+
+
+objs$FN_S3478 <- add_bulk_mapping_to_seurat(
+  object = objs$FN_S3478, 
+  remove_doublets = F,
+  combined_tsv = file.path(root, "analysis/FN_S3478_bulk_mapping/combined_results_with_bulk_mapping.tsv")
+)
+
+
+unique(FN_S1256@meta.data$BulkSample)
+unique(FN_S3478@meta.data$BulkSample)
+raw <- get_merge(obj.list = list(FN_S1256, FN_S3478))
+table(raw$BulkSample)
+dim(raw)
+rm(FN_S1256, FN_S3478, objs)
+
+```
+
+# Quality control
+
+```{r}
+
+seurat.list <- split_seurat_objects(raw, split.by = "BulkSample")
+invisible(gc())
+
+obj <- run_qc(x = seurat.list, min_feat = 500, min_umi = 500, mad_n = 5, max_mito = 5,
+                      species = "human", sample_col = "BulkSample",
+                      merge_output = T, outdir = file.path(dir.results, "data"))
+
+rm(seurat.list)
+invisible(gc())
+
+```
+
+
+```{r fig.width=10, fig.height=5}
+
+cellvio(merged, group.by = "BulkSample", features = c("nFeature_RNA", "nCount_RNA","percent_mito"),
+        stack = T, pt.size = 0.1, slot = "counts")
+
+```
+
+# Save data
+
+```{r}
+
+saveRDS(raw, file.path(dir.results, "data/raw.rds"))
+saveRDS(obj, file.path(dir.results, "data/merged.rds"))
+
+```
+
+
+
+## Session info
+```{r}
+sessionInfo()
+```
